Fixed some mistakes on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@
 /* about */
 
 .about {
-  height: 100vh;
+  height: 110vh;
   width: 100%;
   display: inline-block;
   align-items: center;
@@ -263,7 +263,7 @@ img {
   color: white;
   clip-path: polygon(0 5%, 100% 0, 100% 95%, 0% 100%);
   background: black;
-  padding-top: 195px;
+  padding-top: 45px;
   align-items: center;
 }
 
@@ -418,6 +418,14 @@ textarea {
 }
 
 /* media screen */
+
+@media screen and (max-width: 1024px) {
+  .contact {
+    height: 110vh;
+    padding-top: 80px;
+  }
+}
+
 @media screen and (max-width: 950px) {
   .title {
     width: 50%;
@@ -439,7 +447,7 @@ textarea {
     height: 350px;
     padding: 10px;
   }
-  .about{
+  .about {
     height: 85vh;
   }
   .about p {
@@ -460,6 +468,12 @@ textarea {
   .labels {
     margin-top: 50px;
     line-height: 1.3rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .about {
+    height: 105vh;
   }
 }
 
@@ -599,11 +613,11 @@ textarea {
   .form {
     width: 250px;
     padding-top: 30px;
-}
+  }
   .labels {
     margin-top: 20px;
   }
-  .labels p{
+  .labels p {
     font-size: 14px;
   }
   .cont {
@@ -623,10 +637,10 @@ textarea {
   .contact2 {
     height: 200px;
   }
-  .labels h3{
+  .labels h3 {
     font-size: 16px;
   }
-  .labels h4{
+  .labels h4 {
     font-size: 14px;
   }
   .btn {
@@ -635,7 +649,8 @@ textarea {
   .contact2 {
     padding: 0px 60px 0 60px;
   }
-  input, textarea {
+  input,
+  textarea {
     line-height: 20px;
     font-size: 14px;
   }
@@ -645,40 +660,18 @@ textarea {
 }
 
 @media screen and (max-width: 350px) {
-.about{
-  height: 160vh;
-}
-.form {
-  width: 200px;
-  padding-top: 0;
-}
-.contact{
-  height: 110vh;
-}
-}
-
-
-@media screen and (max-width: 1024px) {
-.container {
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.img1{
-width: 60%;
-}
-.about2{
-  width: 60%;
-}
-.contact {
-  height: 70vh;
-  padding-top: 80px;
-}
-}
-
-
-@media screen and (max-width: 1024px) {
-.about{
-  height: 105vh;
-}
+  .about {
+    height: 130vh;
+  }
+  .form {
+    width: 200px;
+    padding-top: 0;
+  }
+  .contact {
+    height: 110vh;
+    padding-top: 95px;
+  }
+  .labels{
+    margin-top: 50px;
+  }
 }
